--- a/.devcontainer/share/.gitignore
+++ b/.devcontainer/share/.gitignore
@@ -1,2 +1,24 @@
-*
-!.gitignore
+.DS_Store
+build
+node_modules
+*.log
+
+go.sum
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
